--- a/newsandtopic/src/main/resources/application.properties
+++ b/newsandtopic/src/main/resources/application.properties
@@ -21,3 +21,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
+
+server.port=${PORT:8080}
